fix: Fix the issue of summary appearing on mobile
모바일에서 summary 모두 나오는 부분 해결

--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -110,9 +110,12 @@
     }
   }
   @include mobile {
-    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1; /* 라인수 */
+    word-wrap: break-word;
+    -webkit-box-orient: vertical;
     overflow: hidden;
-    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 }
 
